[gd_scene load_steps=15 format=3 uid="uid://8rtd7mjr7jah"]

[ext_resource type="Script" uid="uid://bft0q8u7g8pjw" path="res://Menu Scenes/menu.gd" id="1_dongr"]
[ext_resource type="PackedScene" uid="uid://dnfm7cdjuhfsq" path="res://Menu Scenes/carousel_container.tscn" id="1_en0le"]
[ext_resource type="Texture2D" uid="uid://cnjvlvavntlhk" path="res://Menu Assets/cards v2/Lesson_Cards_001.png" id="2_wguuc"]
[ext_resource type="Texture2D" uid="uid://bm06vk3mfnn88" path="res://Menu Assets/cards v2/Lesson_Cards_002.png" id="3_mooym"]
[ext_resource type="Texture2D" uid="uid://biicubh00vdyt" path="res://Menu Assets/cards v2/Lesson_Cards_003.png" id="4_xfgc3"]
[ext_resource type="Texture2D" uid="uid://rwgkhha6dj4u" path="res://Menu Assets/cards v2/Lesson_Cards_004.png" id="5_op4s7"]
[ext_resource type="Texture2D" uid="uid://b6m05r7vtdh2j" path="res://Menu Assets/cards v2/Lesson_Cards_005.png" id="6_exk7r"]
[ext_resource type="Texture2D" uid="uid://chbuypf6vnbax" path="res://Menu Assets/Left Button (1).png" id="6_lppip"]
[ext_resource type="Texture2D" uid="uid://1wb7qyfvrcsw" path="res://Menu Assets/cards v2/Lesson_Cards_006.png" id="7_6iowy"]
[ext_resource type="Texture2D" uid="uid://086irdnm1fxk" path="res://Menu Assets/Right Button (1).png" id="7_vmw7k"]
[ext_resource type="Texture2D" uid="uid://d1tpmykefv61n" path="res://Menu Assets/cards v2/Lesson_Cards_007.png" id="8_wacr1"]
[ext_resource type="Texture2D" uid="uid://bew2bm8ubto0n" path="res://Menu Assets/cards v2/Lesson_Cards_008.png" id="9_cmld5"]
[ext_resource type="Texture2D" uid="uid://58mqs21vlnlr" path="res://Menu Assets/cards v2/Lesson_Cards_009.png" id="10_ugxmy"]
[ext_resource type="Texture2D" uid="uid://dumsyhs000cbh" path="res://Menu Assets/cards v2/Lesson_Cards_010.png" id="11_n2mnj"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_dongr")

[node name="CarouselContainer" parent="." node_paths=PackedStringArray("position_offset_node") instance=ExtResource("1_en0le")]
position = Vector2(962, 65)
spacing = -62.575
wraparound_enabled = true
opacity_strength = 0.49
scale_min = 0.01
follow_button_focus = true
position_offset_node = NodePath("Control")

[node name="Control" type="Control" parent="CarouselContainer"]
layout_mode = 3
anchors_preset = 0
offset_top = 96.4991
offset_right = 40.0
offset_bottom = 136.499

[node name="TextureButton2" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.999999)
z_index = 1
layout_mode = 0
offset_left = -538.0
offset_right = 538.0
offset_bottom = 644.0
scale = Vector2(0.999999, 0.999999)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("2_wguuc")

[node name="TextureButton3" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -581
layout_mode = 0
offset_left = -538.0
offset_top = 581.425
offset_right = 538.0
offset_bottom = 1225.43
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("3_mooym")

[node name="TextureButton4" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -1162
layout_mode = 0
offset_left = -538.0
offset_top = 1162.85
offset_right = 538.0
offset_bottom = 1806.85
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("4_xfgc3")

[node name="TextureButton5" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -1744
layout_mode = 0
offset_left = -538.0
offset_top = 1744.28
offset_right = 538.0
offset_bottom = 2388.27
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("5_op4s7")

[node name="TextureButton6" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -2325
layout_mode = 0
offset_left = -538.0
offset_top = 2325.7
offset_right = 538.0
offset_bottom = 2969.7
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("6_exk7r")

[node name="TextureButton7" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -2907
layout_mode = 0
offset_left = -538.0
offset_top = 2907.13
offset_right = 538.0
offset_bottom = 3551.13
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("7_6iowy")

[node name="TextureButton8" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -3488
layout_mode = 0
offset_left = -538.0
offset_top = 3488.55
offset_right = 538.0
offset_bottom = 4132.55
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("8_wacr1")

[node name="TextureButton9" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -4069
layout_mode = 0
offset_left = -538.0
offset_top = 4069.98
offset_right = 538.0
offset_bottom = 4713.98
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("9_cmld5")

[node name="TextureButton10" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -4088
layout_mode = 0
offset_left = -538.0
offset_top = 4651.4
offset_right = 538.0
offset_bottom = 5295.4
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("10_ugxmy")

[node name="TextureButton11" type="TextureButton" parent="CarouselContainer/Control"]
modulate = Color(1, 1, 1, 0.51)
z_index = -4075
layout_mode = 0
offset_left = -538.0
offset_top = 5232.83
offset_right = 538.0
offset_bottom = 5876.83
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(538, 322)
texture_normal = ExtResource("11_n2mnj")

[node name="LeftButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(365, 862)
texture_normal = ExtResource("6_lppip")

[node name="RightButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(1450, 878)
texture_normal = ExtResource("7_vmw7k")

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
